--- a/app/global.css
+++ b/app/global.css
@@ -22,5 +22,75 @@
     font-size: 10rem;
     color: #fff;
     font-weight: 400;
+    user-select: none;
+  }
+
+  .search__container {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    background-color: #292d39;
+    color: #fff;
+    max-width: 45ch;
+    border-radius: 10px;
+    padding: 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .search__title {
+    margin-bottom: 0.5rem;
+  }
+  .search__input-container {
+    display: flex;
+    gap: 1rem;
+    color: black;
+    padding: 0.5rem 1rem;
+    background-color: #fff;
+    align-items: center;
+    border-radius: 10px;
+    justify-content: center;
+  }
+
+  .search__loading {
+    flex: 1;
+  }
+
+  .search__input {
+    /* border-radius: 10px; */
+    flex: 1;
+  }
+
+  .search__input:focus {
+    outline: none;
+  }
+
+  .search__result_item {
+    background-color: #fff;
+    padding: 1rem 2rem;
+    color: black;
+    /* margin: 0.25rem 0; */
+    margin-bottom: 5px;
+    max-width: 45ch;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .search__result_item:hover {
+    background-color: #eee;
+  }
+
+  .search__result_item-first {
+    border-radius: 10px 10px 0 0;
+  }
+
+  .search__result_item-middle {
+    /* border-radius: 10px; */
+  }
+
+  .search__result_item-last {
+    border-radius: 0 0 10px 10px;
   }
 }
