--- a/app/global.css
+++ b/app/global.css
@@ -30,15 +30,34 @@
     top: 10px;
     left: 10px;
     z-index: 1000;
-    background-color: #292d39;
-    color: #fff;
     max-width: 45ch;
-    border-radius: 10px;
+    color: #fff;
+    display: flex;
+    touch-action: none;
+  }
+
+  .search__result-container {
     padding: 1rem 1rem;
+    border-radius: 10px 0px 10px 10px;
+    background-color: #292d39;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    touch-action: none;
+  }
+
+  .search__bar {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .search__hide-container {
+    display: block;
+    border-radius: 0px 10px 10px 0px;
+    background-color: #292d39;
+    padding: 0.5rem;
+    align-self: flex-start;
+    cursor: pointer;
   }
 
   .search__title {
@@ -55,6 +74,7 @@
     align-items: center;
     border-radius: 10px;
     justify-content: center;
+    flex: 1;
   }
 
   .search__loading {
@@ -95,6 +115,118 @@
 
   .search__result_item-last {
     border-radius: 0 0 10px 10px;
+  }
+
+  .settings-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1010;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 15dvw;
+    gap: 1rem;
+    user-select: none;
+  }
+
+  .settings__icon {
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 0.5rem;
+    align-self: flex-end;
+    cursor: pointer;
+  }
+
+  .settings__selection {
+    border-radius: 10px;
+    background-color: #292d39;
+    padding: 2rem;
+  }
+
+  .settings__unit {
+  }
+
+  .settings__unit-container {
+    border: 2px solid #fff;
+    display: flex;
+    border-radius: 10px;
+  }
+
+  .settings__unit-title {
+    margin: 1rem 0rem;
+    font-size: 1.25rem;
+  }
+
+  .settings__unit-item {
+    text-align: center;
+    flex: 1;
+    border-right: 2px solid #fff;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    transition:
+      background-color 0.3s ease-in,
+      color 0.3s ease-in;
+  }
+
+  .settings__unit-item:last-child {
+    border: none;
+  }
+
+  .settings__unit-item-active {
+    color: #292d39;
+    background-color: #fff;
+  }
+
+  .settings__unit-item-active:first-child {
+    border-radius: 6px 0px 0px 6px;
+  }
+
+  .settings__unit-item-active:last-child {
+    border-radius: 0px 6px 6px 0px;
+  }
+
+  .settings__temperature--container {
+  }
+  .settings {
+    position: absolute;
+    top: 15dvh;
+    right: 10px;
+    z-index: 1010;
+    background-color: #292d39;
+    border-radius: 10px;
+    width: 45ch;
+    color: #fff;
+    height: 30dvh;
+    padding: 1rem;
+  }
+
+  .settings__item {
+    padding: 0.5rem 1rem;
+    flex: 1;
+    text-align: center;
+    transition:
+      background-color 0.4s ease-in,
+      color 0.4s ease-in;
+    user-select: none;
+  }
+
+  .settings__item:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #292d39;
+  }
+
+  .settings__item:nth-child(odd) {
+    border-right: 1px solid #fff;
+  }
+
+  .settings__item:last-child {
+    border-right: none;
+  }
+
+  .settings_unit-title {
+    text-align: center;
   }
 
   .weather__container {
