-> Current weather card updated

--- a/app/global.css
+++ b/app/global.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    /* --bg-weather-info: rgba(130, 176, 225, 1); */
+    --bg-weather-info: #292d398d;
+    --colors-redYellowGradient100: linear-gradient(330deg, rgb(255, 245, 154) 20%, rgb(255, 109, 109) 100%);
+    /* --colors-redYellowGradient40: linear-gradient(330deg, rgba(255, 245, 154, 0.6) 20%, rgba(255, 109, 109, 0.6) 100%); */
+    --colors-redYellowGradient40: #715df2c1;
+  }
+
   * {
     box-sizing: border-box;
   }
@@ -39,7 +47,7 @@
   .search__result-container {
     padding: 1rem 1rem;
     border-radius: 10px 0px 10px 10px;
-    background-color: #292d39;
+    background-color: #292d39b5;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -91,9 +99,9 @@
   }
 
   .search__result_item {
-    background-color: #fff;
+    background-color: #715df286;
     padding: 1rem 2rem;
-    color: black;
+    color: #fff;
     /* margin: 0.25rem 0; */
     margin-bottom: 5px;
     max-width: 45ch;
@@ -231,23 +239,75 @@
 
   .weather__container {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    bottom: 50%;
+    left: 52.5%;
     z-index: 1000;
-    background-color: #292d39;
     color: #fff;
-    max-width: 45ch;
+    max-width: 40ch;
     min-width: 25dvw;
-    min-height: 50dvh;
+    min-height: 30dvh;
     border-radius: 10px;
     padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     touch-action: none;
     user-select: none;
+    border-width: 2px;
   }
 
-  .weather__current-container {
+  .weather__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .weather__type-container {
+    border: 2px solid #fff;
+    display: flex;
+    border-radius: 10px;
+    align-items: center;
+    flex-wrap: wrap;
+    min-width: 25ch;
+  }
+
+  .weather__header-item {
+    text-align: center;
+    flex: 1 0 90px;
+    border-right: 2px solid #fff;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    transition:
+      background-color 0.3s ease-in,
+      color 0.3s ease-in;
+  }
+
+  .weather__header-item:last-child {
+    border: none;
+  }
+
+  .weather__header-item-active {
+    color: #292d39;
+    background-color: #fff;
+  }
+
+  .weather__header-item-active:first-child {
+    border-radius: 6px 0px 0px 6px;
+  }
+
+  .weather__header-item-active:last-child {
+    border-radius: 0px 6px 6px 0px;
+  }
+
+  .weather__container::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: inherit;
+    background: var(--colors-redYellowGradient40);
+    z-index: -1;
   }
 
   .weather__title {
@@ -260,11 +320,8 @@
   }
 
   .weather__data {
-    background-color: rgba(255, 255, 255, 0.9);
-    color: #000;
-    border-radius: 0px 0px 10px 10px;
-    border-width: 0px 1px 0px 1px;
-    border-color: #292d39;
+    /* border-radius: 0px 0px 10px 10px;
+    border-width: 0px 1px 1px 1px; */
     padding: 1rem 1rem;
     flex: 1;
     display: flex;
@@ -275,18 +332,23 @@
   }
 
   .weather__tab {
-    background-color: rgba(255, 255, 255, 0.9);
+    /* background-color: rgba(255, 255, 255, 0.9); */
+    background-color: transparent;
     padding: 1rem 1rem;
     flex: 1;
     text-align: center;
     border-radius: 10px 10px 0px 0px;
-    border-width: 0px 1px 1px 1px;
-    border-color: #292d39;
+    border-width: 1px 1px 1px 1px;
     cursor: pointer;
+
+    box-shadow: inset 0px -3px 10px 0px rgba(0, 0, 0, 0.5);
   }
 
   .weather__tab-active {
-    border-width: 0px 1px 0px 1px;
+    background-color: var(--bg-weather-info);
+    border-width: 1px 1px 0px 1px;
+    box-shadow: none;
+    box-shadow: 0px -2px 5px 0px rgba(0, 0, 0, 0.75);
   }
 
   .weather__daily-container {
