--- a/app/global.css
+++ b/app/global.css
@@ -111,8 +111,6 @@
   .search__result_item {
     background-color: #715df286;
     padding: 1rem 2rem;
-    color: #fff;
-    /* margin: 0.25rem 0; */
     margin-bottom: 5px;
     max-width: 45ch;
     cursor: pointer;
@@ -120,7 +118,7 @@
   }
 
   .search__result_item:hover {
-    background-color: #eee;
+    background-color: var(--colors-redYellowGradient40);
   }
 
   .search__result_item-first {
