--- a/app/global.css
+++ b/app/global.css
@@ -4,11 +4,8 @@
 
 @layer base {
   :root {
-    /* --bg-weather-info: rgba(130, 176, 225, 1); */
     --bg-weather-info: #292d398d;
-    --colors-redYellowGradient100: linear-gradient(330deg, rgb(255, 245, 154) 20%, rgb(255, 109, 109) 100%);
-    /* --colors-redYellowGradient40: linear-gradient(330deg, rgba(255, 245, 154, 0.6) 20%, rgba(255, 109, 109, 0.6) 100%); */
-    --colors-redYellowGradient40: #715df2c1;
+    --colors-primary: #715df2c1;
   }
 
   * {
@@ -27,332 +24,40 @@
 
   .page__title {
     width: 100dvw !important;
-    font-size: 10rem;
+    font-size: 5rem;
     color: #fff;
     font-weight: 400;
     user-select: none;
   }
 
-  .search__result-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  /* 2xl */
+  @media (max-width: 1536px) {
+    .page__title {
+      font-size: 4rem;
+    }
   }
-
-  .search__bar {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
+  /* xl */
+  @media (max-width: 1280px) {
+    .page__title {
+      font-size: 4rem;
+    }
   }
-
-  .search__clear-icon {
-    color: lightgray;
+  /* md */
+  @media (max-width: 768px) {
+    .page__title {
+      font-size: 3rem;
+    }
   }
-
-  .search__clear-icon:hover {
-    color: var(--bg-weather-info);
+  /* sm */
+  @media (max-width: 640px) {
+    .page__title {
+      font-size: 2rem;
+    }
   }
-
-  .search__hide-container {
-    display: block;
-    border-radius: 0px 10px 10px 0px;
-    background-color: #292d39;
-    padding: 0.5rem;
-    align-self: flex-start;
-    cursor: pointer;
-  }
-
-  .search__title {
-    display: inline-block;
-    margin-bottom: 0.75rem;
-    user-select: none;
-  }
-  .search__input-container {
-    display: flex;
-    gap: 1rem;
-    color: black;
-    padding: 0.5rem 1rem;
-    background-color: #fff;
-    align-items: center;
-    border-radius: 10px;
-    justify-content: center;
-    flex: 1;
-  }
-
-  .search__loading {
-    flex: 1;
-  }
-
-  .search__input {
-    /* border-radius: 10px; */
-    flex: 1;
-    background: none;
-  }
-
-  .search__input:focus {
-    outline: none;
-    background: none;
-  }
-
-  .search__result_item {
-    background-color: #715df286;
-    padding: 1rem 2rem;
-    margin-bottom: 5px;
-    max-width: 45ch;
-    cursor: pointer;
-    user-select: none;
-  }
-
-  .search__result_item:hover {
-    background-color: var(--colors-redYellowGradient40);
-  }
-
-  .search__result_item-first {
-    border-radius: 10px 10px 0 0;
-  }
-
-  .search__result_item-middle {
-    /* border-radius: 10px; */
-  }
-
-  .search__result_item-last {
-    border-radius: 0 0 10px 10px;
-  }
-
-  .settings-container {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 1010;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 15dvw;
-    gap: 1rem;
-    user-select: none;
-  }
-
-  .settings__icon {
-    border: 2px solid #fff;
-    border-radius: 10px;
-    padding: 0.5rem;
-    align-self: flex-end;
-    cursor: pointer;
-  }
-
-  .settings__selection {
-    border-radius: 10px;
-    background-color: #292d39;
-    padding: 2rem;
-  }
-
-  .settings__unit {
-  }
-
-  .settings__unit-container {
-    border: 2px solid #fff;
-    display: flex;
-    border-radius: 10px;
-  }
-
-  .settings__unit-title {
-    margin: 1rem 0rem;
-    font-size: 1.25rem;
-  }
-
-  .settings__unit-item {
-    text-align: center;
-    flex: 1;
-    border-right: 2px solid #fff;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    transition:
-      background-color 0.3s ease-in,
-      color 0.3s ease-in;
-  }
-
-  .settings__unit-item:last-child {
-    border: none;
-  }
-
-  .settings__unit-item-active {
-    color: #292d39;
-    background-color: #fff;
-  }
-
-  .settings__unit-item-active:first-child {
-    border-radius: 6px 0px 0px 6px;
-  }
-
-  .settings__unit-item-active:last-child {
-    border-radius: 0px 6px 6px 0px;
-  }
-
-  .settings__temperature--container {
-  }
-  .settings {
-    position: absolute;
-    top: 15dvh;
-    right: 10px;
-    z-index: 1010;
-    background-color: #292d39;
-    border-radius: 10px;
-    width: 45ch;
-    color: #fff;
-    height: 30dvh;
-    padding: 1rem;
-  }
-
-  .settings__item {
-    padding: 0.5rem 1rem;
-    flex: 1;
-    text-align: center;
-    transition:
-      background-color 0.4s ease-in,
-      color 0.4s ease-in;
-    user-select: none;
-  }
-
-  .settings__item:hover {
-    background-color: rgba(255, 255, 255, 0.9);
-    color: #292d39;
-  }
-
-  .settings__item:nth-child(odd) {
-    border-right: 1px solid #fff;
-  }
-
-  .settings__item:last-child {
-    border-right: none;
-  }
-
-  .settings_unit-title {
-    text-align: center;
-  }
-
-  .weather__container {
-    position: absolute;
-    bottom: 50%;
-    left: 52.5%;
-    z-index: 1000;
-    color: #fff;
-    max-width: 40ch;
-    min-width: 25dvw;
-    min-height: 30dvh;
-    border-radius: 10px;
-    padding: 1rem 1rem;
-    display: flex;
-    flex-direction: column;
-    touch-action: none;
-    user-select: none;
-    border-width: 2px;
-  }
-
-  .weather__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .weather__type-container {
-    border: 2px solid #fff;
-    display: flex;
-    border-radius: 10px;
-    align-items: center;
-    min-width: 45ch;
-  }
-
-  .weather__header-item {
-    text-align: center;
-    flex: 1 0 90px;
-    border-right: 2px solid #fff;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    transition:
-      background-color 0.3s ease-in,
-      color 0.3s ease-in;
-  }
-
-  .weather__header-item:last-child {
-    border: none;
-  }
-
-  .weather__header-item-active {
-    color: #292d39;
-    background-color: #fff;
-  }
-
-  .weather__header-item-active:first-child {
-    border-radius: 6px 0px 0px 6px;
-  }
-
-  .weather__header-item-active:last-child {
-    border-radius: 0px 6px 6px 0px;
-  }
-
-  .weather__container::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    border-radius: inherit;
-    background: var(--colors-redYellowGradient40);
-    z-index: -1;
-  }
-
-  .weather__title {
-    font-size: 2rem;
-  }
-
-  .weather__city_name {
-    font-size: 2rem;
-    margin: 1rem;
-  }
-
-  .weather__data {
-    /* border-radius: 0px 0px 10px 10px;
-    border-width: 0px 1px 1px 1px; */
-    padding: 1rem 1rem;
-    flex: 1;
-    display: flex;
-  }
-
-  .weather__tab_container {
-    display: flex;
-  }
-
-  .weather__tab {
-    /* background-color: rgba(255, 255, 255, 0.9); */
-    background-color: transparent;
-    padding: 1rem 1rem;
-    flex: 1;
-    text-align: center;
-    border-radius: 10px 10px 0px 0px;
-    border-width: 1px 1px 1px 1px;
-    cursor: pointer;
-
-    box-shadow: inset 0px -3px 10px 0px rgba(0, 0, 0, 0.5);
-  }
-
-  .weather__tab-active {
-    background-color: var(--bg-weather-info);
-    border-width: 1px 1px 0px 1px;
-    box-shadow: none;
-    box-shadow: 0px -2px 5px 0px rgba(0, 0, 0, 0.75);
-  }
-
-  .weather__daily-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 2rem;
-  }
-
-  .marker:hover {
-    cursor: pointer;
+  /* xs */
+  @media (max-width: 475px) {
+    .page__title {
+      font-size: 1.75rem;
+    }
   }
 }
