--- a/src/components/weather/DailyWeatherCard.module.css
+++ b/src/components/weather/DailyWeatherCard.module.css
@@ -5,6 +5,14 @@
   flex-wrap: nowrap;
 }
 
+.weather__daily-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
 .weather__daily--status {
   display: flex;
   flex: 1;
