--- a/src/components/dom/Settings.module.css
+++ b/src/components/dom/Settings.module.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 15dvw;
+  width: 25%;
   gap: 1rem;
   user-select: none;
 }
@@ -41,7 +41,7 @@
   text-align: center;
   flex: 1;
   border-right: 2px solid #fff;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.75rem;
   cursor: pointer;
   transition:
     background-color 0.3s ease-in,
@@ -65,42 +65,83 @@
   border-radius: 0px 6px 6px 0px;
 }
 
-.settings {
-  position: absolute;
-  top: 15dvh;
-  right: 10px;
-  z-index: 1010;
-  background-color: #292d39;
-  border-radius: 10px;
-  width: 45ch;
-  color: #fff;
-  height: 30dvh;
-  padding: 1rem;
+/* 2xl */
+@media (max-width: 1536px) {
+  .settings__unit-wind {
+    flex-direction: column;
+  }
+
+  .settings__unit-wind > .settings__unit-item {
+    border: none;
+    border-bottom: 2px solid #fff;
+  }
+
+  .settings__unit-wind > .settings__unit-item-active:first-child {
+    border-radius: 6px 6px 0px 0px;
+  }
+
+  .settings__unit-wind > .settings__unit-item-active:last-child {
+    border-radius: 0px 0px 6px 6px;
+  }
+
+  .settings__unit-wind > .settings__unit-item:last-child {
+    border: none;
+  }
 }
 
-.settings__item {
-  padding: 0.5rem 1rem;
-  flex: 1;
-  text-align: center;
-  transition:
-    background-color 0.4s ease-in,
-    color 0.4s ease-in;
-  user-select: none;
-}
+/* lg */
+@media (max-width: 1024px) {
+  .settings__unit-title {
+    margin: 0.5rem 0rem;
+    font-size: 1rem;
+  }
 
-.settings__item:hover {
-  background-color: rgba(255, 255, 255, 0.9);
-  color: #292d39;
+  .settings__selection {
+    padding: 1.5rem;
+  }
 }
+/* md */
+@media (max-width: 768px) {
+  .settings__unit-title {
+    font-size: 1rem;
+  }
 
-.settings__item:nth-child(odd) {
-  border-right: 1px solid #fff;
+  .settings__unit-item {
+    padding: 0.25rem 0;
+  }
+
+  .settings__selection {
+    padding: 1rem;
+  }
+
+  .settings-container {
+    width: 30%;
+  }
 }
+/* sm */
+@media (max-width: 640px) {
+  .settings__unit-temp {
+    flex-direction: column;
+  }
 
-.settings__item:last-child {
-  border-right: none;
-}
+  .settings__unit-temp > .settings__unit-item {
+    border: none;
+    border-bottom: 2px solid #fff;
+  }
 
-.settings_unit-title {
-  text-align: center;
+  .settings__unit-temp > .settings__unit-item-active:first-child {
+    border-radius: 6px 6px 0px 0px;
+  }
+
+  .settings__unit-temp > .settings__unit-item-active:last-child {
+    border-radius: 0px 0px 6px 6px;
+  }
+
+  .settings__unit-temp > .settings__unit-item:last-child {
+    border: none;
+  }
+
+  .settings-container {
+    width: 50%;
+  }
 }
