--- a/src/components/dom/SearchBar.module.css
+++ b/src/components/dom/SearchBar.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
+  padding: 1rem 0.5rem;
 }
 
 .search__bar {
@@ -18,31 +20,14 @@
   color: var(--bg-weather-info);
 }
 
-.search__hide-container {
-  display: block;
-  border-radius: 0px 10px 10px 0px;
-  background-color: #292d39;
-  padding: 0.5rem;
-  align-self: flex-start;
-  cursor: pointer;
-}
-
-.search__title {
-  display: inline-block;
-  margin-bottom: 0.75rem;
-  user-select: none;
-}
-
 .search__input-container {
   display: flex;
-  gap: 1rem;
   color: black;
   padding: 0.5rem 1rem;
   background-color: #fff;
   align-items: center;
   border-radius: 10px;
-  justify-content: center;
-  flex: 1;
+  flex-grow: 1;
 }
 
 .search__loading {
@@ -50,8 +35,7 @@
 }
 
 .search__input {
-  /* border-radius: 10px; */
-  flex: 1;
+  width: 100%;
   background: none;
 }
 
@@ -79,23 +63,4 @@
 
 .search__result_item-last {
   border-radius: 0 0 10px 10px;
-}
-
-/* 2xl */
-@media (max-width: 1536px) {
-}
-/* xl */
-@media (max-width: 1280px) {
-}
-/* lg */
-@media (max-width: 1024px) {
-}
-/* md */
-@media (max-width: 768px) {
-}
-/* sm */
-@media (max-width: 640px) {
-}
-/* xs */
-@media (max-width: 475px) {
 }
