--- a/src/components/dom/SearchSelection.module.css
+++ b/src/components/dom/SearchSelection.module.css
@@ -12,7 +12,8 @@
   top: 10px;
   left: 10px;
   z-index: 1000;
-  width: 50ch;
+  width: 25%;
+  min-width: 270px;
   color: #fff;
   display: flex;
   flex-direction: row;
@@ -45,32 +46,9 @@
 
 .selection__item--container {
   background-color: #292d39;
-  padding: 1rem 1rem;
   border-radius: 0px 0px 10px 10px;
   max-height: 40dvh;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
-}
-
-/* 2xl */
-@media (max-width: 1536px) {
-  .selection__flex {
-    width: 45ch;
-  }
-}
-/* xl */
-@media (max-width: 1280px) {
-}
-/* lg */
-@media (max-width: 1024px) {
-}
-/* md */
-@media (max-width: 768px) {
-}
-/* sm */
-@media (max-width: 640px) {
-}
-/* xs */
-@media (max-width: 475px) {
 }
