--- a/src/components/dom/SearchBar.module.css
+++ b/src/components/dom/SearchBar.module.css
@@ -3,7 +3,14 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+  max-height: 40dvh;
   padding: 1rem 0.5rem;
+}
+
+.search__results {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: thin;
 }
 
 .search__bar {
