--- a/app/global.css
+++ b/app/global.css
@@ -19,7 +19,8 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   .page__title {
