--- a/src/components/dom/SearchBar.module.css
+++ b/src/components/dom/SearchBar.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
-  max-height: 40dvh;
+  max-height: 60dvh;
   padding: 1rem 0.5rem;
 }
 
@@ -58,6 +58,7 @@
   margin-bottom: 5px;
   cursor: pointer;
   user-select: none;
+  overflow-y: hidden;
 }
 
 .search__result_item > p {
