--- a/src/components/weather/DailyWeatherCard.module.css
+++ b/src/components/weather/DailyWeatherCard.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 0rem;
 }
 
 .weather__daily--status {
@@ -22,10 +22,7 @@
 .weather__daily--img {
   position: relative;
   width: 50%;
-  /* left: 10%; */
-  height: 200px;
-}
-.weather__daily--temp-container {
+  height: 150px;
 }
 
 .weather__daily--status-container {
@@ -38,6 +35,7 @@
   margin: 0;
   padding: 0;
   line-height: 1.2;
+  text-align: end;
 }
 .weather__daily--desc {
   font-style: italic;
@@ -51,7 +49,7 @@
 .weather__daily--misc-container {
   display: grid;
   grid-template-columns: repeat(2, minmax(150px, 1fr));
-  grid-template-rows: repeat(4, minmax(50px, 1fr));
+  grid-template-rows: repeat(3, minmax(50px, 1fr));
   font-size: 1.15rem;
 }
 
@@ -67,9 +65,54 @@
   border-bottom: 1px solid white;
 }
 
+.weather__daily--misc-item:last-child,
+.weather__daily--misc-item:nth-last-child(2) {
+  border-bottom: none;
+}
+
 .weather__daily--misc-title {
   display: flex;
   align-items: center;
   flex: 1;
-  gap: 0.5rem;
+  gap: 0.25rem;
+  justify-content: flex-start;
+}
+
+/* xl */
+@media (max-width: 1280px) {
+  .weather__daily--misc-item {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .weather__daily--misc-icon {
+    flex-basis: 32px;
+  }
+}
+
+/* lg */
+@media (max-width: 1024px) {
+  .weather__daily--misc-container {
+    font-size: 1rem;
+  }
+
+  .weather__daily--temp {
+    font-size: 3rem;
+  }
+}
+/* md */
+@media (max-width: 768px) {
+  .weather__daily--misc-item {
+    padding: 0.75rem;
+  }
+}
+/* sm */
+@media (max-width: 640px) {
+  .weather__daily--misc-item {
+    padding: 0.25rem;
+  }
+
+  .weather__daily--img {
+    height: 100px;
+  }
 }
